add usage instructions